# encoins-bulletproofs

./: .gitignore  README.md  cabal.project  encoins-bulletproofs.cabal  hie.yaml
src/ENCOINS/: BaseTypes.hs  Bulletproofs.hs  Orphans.hs
src/ENCOINS/Bulletproofs/: Common.hs  Prove.hs  Types.hs  Utils.hs  Verify.hs
src/ENCOINS/Crypto/: Curve.hs  Edwards25519.hs  Field.hs
test/: Main.hs
test/Tests/: Group.hs  Verification.hs
